--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "clean-dist":"rimraf ./dist && mkdir dist",
     "prebuild":"npm-run-all clean-dist test lint",
     "build":"babel-node buildScripts/build.js",
-    "post-build":"babel-node buildScripts/distServer.js"
+    "post-build":"babel-node buildScripts/distServer.js",
+    "deploy":"surge ./dist"
   },
   "author": "Raja",
   "license": "MIT",
@@ -55,6 +56,7 @@
     "open": "0.0.5",
     "rimraf": "2.5.4",
     "style-loader": "0.13.1",
+    "surge":"0.18.0",
     "webpack": "1.13.2",
     "webpack-dev-middleware": "1.8.4",
     "webpack-hot-middleware": "2.13.0",
